[package]
name = "spl_token_swap"
version = "0.1.0"
description = "Solana Program Library Token Swap"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Green-2.0"
edition = "2021"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.1"

arrayref = "0.3.7"
enum_dispatch = "0.3.12"
num-derive = "0.4"
num-traits = "0.2"
spl-math = { version = "0.2", path = "../../libs/libraries/math", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0", path = "../../libs/token/program", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "2.0", path = "../../libs/token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "1.3", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }

[dev-dependencies]
proptest = "1.4"
roots = "0.0.8"
solana-sdk = ">=1.17.17,<=2"
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

